--- a/style.css
+++ b/style.css
@@ -287,3 +287,28 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
     .section:nth-child(even) {
       background: #d1f0ff;
     }
+
+    .whatsapp-float{
+
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      width: 3rem;
+      height: 3rem;
+      line-height: 1rem;
+      padding: 0.5rem;
+      margin: 0 8px;
+      border-radius: 50%;
+      color: white;
+      background-color: #25d366;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      font-size: 2rem;
+    }
+
+    .whatsapp-float:hover{
+
+      color: beige;
+      background-color: #077212;
+      text-decoration: none;
+    }
